<resources>
    <string name="app_name">Water_app</string>
    <string name="hint_peso">Seu peso (Kg)</string>
    <string name="hint_idade">Sua idade</string>
    <string name="text_button_calcular">Calcular Ingestão diaria</string>
    <string name="text_button_lembrete">Lembrete</string>
    <string name="text_button_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minutos">00</string>
    <string name="toast_informe_peso">Informe seu peso!!</string>
    <string name="toast_informe_idade">Informe sua idade!!</string>
    <string name="dialog_titulo">Redefinir dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes?</string>
    <string name="alarme_mensagem">Hora de beber agua!!</string>



    <string name="nome_app">FrescoApp</string>
    <string name="nome_button">Iniciar</string>
    <string name="nome_version">Version 3.0</string>
</resources>