<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <!-- Container Header -->
        <View
            android:id="@+id/container_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/container_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>




        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/bebaagua"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/container_header"
            app:layout_constraintStart_toStartOf="@id/container_header"/>

        <!-- Imagem Redefinir -->
        <ImageView
            android:id="@+id/ic_redefinir"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_refresh"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/container_header"
            app:layout_constraintEnd_toEndOf="@id/container_header"/>

        <!-- EditText Peso -->
        <EditText
            android:id="@+id/edit_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_peso"
            android:padding="15dp"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/container_header"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- EditText Idade -->
        <EditText
            android:id="@+id/edit_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_idade"
            android:padding="15dp"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="number"
            android:maxLength="3"
            android:gravity="center"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/container_header"
            app:layout_constraintStart_toEndOf="@id/edit_peso"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Botão Calcular -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/text_button_calcular"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="15dp"
            android:background="@drawable/bg_degrade_button"
            app:layout_constraintTop_toBottomOf="@id/edit_peso"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Container Resultado -->
        <View
            android:id="@+id/container_resultado_ml"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/container_resultado_ml"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@id/bt_calcular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Texto Resultado ML -->
        <TextView
            android:id="@+id/txt_resultado_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="35sp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/container_resultado_ml"
            app:layout_constraintStart_toStartOf="@id/container_resultado_ml"
            app:layout_constraintEnd_toEndOf="@id/container_resultado_ml"
            app:layout_constraintBottom_toBottomOf="@id/container_resultado_ml"/>

        <!-- Botão Definir Lembrete -->
        <Button
            android:id="@+id/bt_definir_lembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/text_button_lembrete"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_resultado_ml"/>

        <!-- Botão Alarme -->
        <Button
            android:id="@+id/bt_alarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/text_button_alarme"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.731"
            app:layout_constraintStart_toEndOf="@id/bt_definir_lembrete"
            app:layout_constraintTop_toBottomOf="@id/container_resultado_ml"/>

        <!-- Hora e Minutos -->
        <TextView
            android:id="@+id/txt_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hora"
            android:textSize="35sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="150dp"
            app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_dois_pontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dois_pontos"
            android:textSize="35sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete"
            app:layout_constraintStart_toEndOf="@id/txt_hora"/>

        <TextView
            android:id="@+id/txt_minutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_minutos"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            app:layout_constraintStart_toEndOf="@id/txt_hora"
            app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete"/>

        <Button
            android:id="@+id/bt_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Voltar"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"/>


        <Button
            android:id="@+id/bt_dicas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dicas"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
